voting-app/front-end-deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  namespace: voting-app
spec:
  selector:
    app: angular-voting-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-dep-voting-app
  namespace: voting-app
  labels:
    app: angular-voting-app
spec:
  replicas: 1
  template:
    metadata:
      name: angular-voting-app
      labels:
        app: angular-voting-app
    spec:
      containers:
        - name: vote
          image: dockersamples/examplevotingapp_vote
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "1Gi"
              cpu: "5m"
            limits:
              memory: "1Gi"
              cpu: "5m"
      priorityClassName: priority-class
  selector:
    matchLabels:
      app: angular-voting-app
