voting-app/front-end-deployment/ingress-argo.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: votingapp.com
      http:
        paths:
          - pathType: Prefix
            path: /argo
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
