voting-app/front-end-deployment/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: votingapp.com
      http:
        paths:
          - pathType: Prefix
            path: /home
            backend:
              service:
                name: angular-service
                port:
                  number: 80
          - pathType: Prefix
            path: /dashboard
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
          - pathType: Prefix
            path: /prome
            backend:
              service:
                name: prometheus-server-ext
                port:
                  number: 80
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: dashboard-kubernetes-dashboard
                port:
                  number: 80
          - pathType: Prefix
            path: /argo
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
